--- a/service/package.json
+++ b/service/package.json
@@ -10,6 +10,7 @@
   "author": "Kevin Zhang, Jean Zhang, Christina Rong",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "lodash": "^4.17.11"
   }
